[gd_scene load_steps=5 format=3 uid="uid://cgnvg1d2kl8c6"]

[ext_resource type="Script" path="res://Test_proto_subnonotica/interactable2.gd" id="1_1r722"]

[sub_resource type="BoxShape3D" id="BoxShape3D_37c0w"]
size = Vector3(1.1, 1.1, 1.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jfgxl"]
albedo_color = Color(0.721569, 0.717647, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ph7yn"]
material = SubResource("StandardMaterial3D_jfgxl")

[node name="Area3D" type="Area3D"]
script = ExtResource("1_1r722")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_37c0w")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_ph7yn")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
